# shamir

./: Makefile  Procfile  README.md  gunicorn_config.py  pyproject.toml  requirements.txt
config/: gunicorn.py  nginx.conf
shamir/: gunicorn_config.py
shamir/api/: app.py  encryption.py  helpers.py
shamir/generator/: constants.py  id.py
