[tool.poetry]
name = "shamir"
version = "0.1.0"
description = ""
authors = ["squerez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
cryptography = "^39.0.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
